Refactored ThreatController to use query params